# swift-dynamic-library-via-cmake

./: .gitignore  CMakeLists.txt  NOTICE  README.md
.reuse/templates/: apache.jinja2
.sourcekit-lsp/: config.json
hooks/: pre-commit
scripts/: clean_build.bash  define_dirs.bash  lib.bash  rebuild_all.bash  rebuild_application.bash  rebuild_library.bash  run_application.bash
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  main.swift
